// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`B7: the hub and the Recurring rows, as they were before B7 > a paused routine with nothing booked past today 1`] = `
{
  "booking_type": "ROUTINE",
  "can": {
    "cancel": true,
    "extend": false,
    "pause": false,
    "reschedule": false,
    "resume": true,
    "skip": false,
  },
  "counts": {
    "cancelled": 0,
    "done": 2,
    "remaining": 3,
    "skipped": 1,
    "total": 5,
  },
  "created_at": "2026-09-20T11:00:00+06:00",
  "frequency": "WEEKLY",
  "id": "aaaaaaaa-0000-4aaa-8aaa-aaaaaaaaaaaa",
  "money": {
    "pay_now": 0,
    "total": 420,
  },
  "next_session": {
    "booking_code": "GS-b-3",
    "booking_id": "b-3",
    "can_reschedule": false,
    "can_skip": false,
    "date": "2026-10-20",
    "end_time": "2026-10-20T17:15:00+06:00",
    "id": "occ-3",
    "index": 3,
    "locked": true,
    "start_time": "2026-10-20T16:30:00+06:00",
    "state": "CONFIRMED",
    "stylist": {
      "id": "maya",
      "name": "Maya",
    },
    "total": 105,
  },
  "pause": {
    "note": "Away",
    "reason": "TRAVEL",
    "until": "2026-11-20",
  },
  "payment_plan": "PAY_AT_SALON",
  "rules": {
    "extend_max": 6,
    "lock_hours": 24,
    "max_future_sessions": 6,
    "max_sessions": 6,
    "min_sessions": 2,
    "misses_to_pause": 2,
    "pause_max_days": 60,
    "reminder_hours": 48,
    "reschedule_within_days": 90,
  },
  "salon_id": "marina-walk",
  "services": [
    {
      "id": "haircut-finish",
      "name": "Haircut & finish",
    },
  ],
  "sessions": [
    {
      "booking_code": "GS-b-0",
      "booking_id": "b-0",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-09-29",
      "end_time": "2026-09-29T17:15:00+06:00",
      "id": "occ-0",
      "index": 0,
      "locked": true,
      "start_time": "2026-09-29T16:30:00+06:00",
      "state": "COMPLETED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": "GS-b-1",
      "booking_id": "b-1",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-10-06",
      "end_time": "2026-10-06T17:15:00+06:00",
      "id": "occ-1",
      "index": 1,
      "locked": true,
      "start_time": "2026-10-06T16:30:00+06:00",
      "state": "MISSED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": "GS-b-2",
      "booking_id": "b-2",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-10-13",
      "end_time": "2026-10-13T17:15:00+06:00",
      "id": "occ-2",
      "index": 2,
      "locked": true,
      "start_time": "2026-10-13T16:30:00+06:00",
      "state": "SKIPPED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": "GS-b-3",
      "booking_id": "b-3",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-10-20",
      "end_time": "2026-10-20T17:15:00+06:00",
      "id": "occ-3",
      "index": 3,
      "locked": true,
      "start_time": "2026-10-20T16:30:00+06:00",
      "state": "CONFIRMED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": "GS-b-4",
      "booking_id": "b-4",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-10-27",
      "end_time": "2026-10-27T17:15:00+06:00",
      "id": "occ-4",
      "index": 4,
      "locked": false,
      "start_time": "2026-10-27T16:30:00+06:00",
      "state": "SCHEDULED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": null,
      "booking_id": null,
      "can_reschedule": false,
      "can_skip": false,
      "date": "2027-02-02",
      "end_time": null,
      "id": "occ-5",
      "index": 5,
      "locked": false,
      "start_time": "2027-02-02T16:30:00+06:00",
      "state": "PLANNED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": null,
    },
  ],
  "status": "PAUSED",
  "stylist": {
    "id": "maya",
    "name": "Maya",
  },
  "time": "16:30",
}
`;

exports[`B7: the hub and the Recurring rows, as they were before B7 > the Recurring rows 1`] = `
{
  "count": 1,
  "results": [
    {
      "booking_type": "ROUTINE",
      "counts": {
        "cancelled": 0,
        "done": 2,
        "remaining": 3,
        "skipped": 1,
        "total": 5,
      },
      "created_at": "2026-09-20T11:00:00+06:00",
      "frequency": "WEEKLY",
      "id": "aaaaaaaa-0000-4aaa-8aaa-aaaaaaaaaaaa",
      "next_session": {
        "booking_code": "GS-b-3",
        "booking_id": "b-3",
        "can_reschedule": false,
        "can_skip": false,
        "date": "2026-10-20",
        "end_time": "2026-10-20T17:15:00+06:00",
        "id": "occ-3",
        "index": 3,
        "locked": true,
        "start_time": "2026-10-20T16:30:00+06:00",
        "state": "CONFIRMED",
        "stylist": {
          "id": "maya",
          "name": "Maya",
        },
        "total": 105,
      },
      "payment_plan": "PAY_AT_SALON",
      "salon_id": "marina-walk",
      "services": [
        {
          "id": "haircut-finish",
          "name": "Haircut & finish",
        },
      ],
      "status": "ACTIVE",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "time": "16:30",
    },
  ],
}
`;

exports[`B7: the hub and the Recurring rows, as they were before B7 > the hub 1`] = `
{
  "booking_type": "ROUTINE",
  "can": {
    "cancel": true,
    "extend": true,
    "pause": true,
    "reschedule": true,
    "resume": false,
    "skip": true,
  },
  "counts": {
    "cancelled": 0,
    "done": 2,
    "remaining": 3,
    "skipped": 1,
    "total": 5,
  },
  "created_at": "2026-09-20T11:00:00+06:00",
  "frequency": "WEEKLY",
  "id": "aaaaaaaa-0000-4aaa-8aaa-aaaaaaaaaaaa",
  "money": {
    "pay_now": 0,
    "total": 420,
  },
  "next_session": {
    "booking_code": "GS-b-3",
    "booking_id": "b-3",
    "can_reschedule": false,
    "can_skip": false,
    "date": "2026-10-20",
    "end_time": "2026-10-20T17:15:00+06:00",
    "id": "occ-3",
    "index": 3,
    "locked": true,
    "start_time": "2026-10-20T16:30:00+06:00",
    "state": "CONFIRMED",
    "stylist": {
      "id": "maya",
      "name": "Maya",
    },
    "total": 105,
  },
  "pause": null,
  "payment_plan": "PAY_AT_SALON",
  "rules": {
    "extend_max": 6,
    "lock_hours": 24,
    "max_future_sessions": 6,
    "max_sessions": 6,
    "min_sessions": 2,
    "misses_to_pause": 2,
    "pause_max_days": 60,
    "reminder_hours": 48,
    "reschedule_within_days": 90,
  },
  "salon_id": "marina-walk",
  "services": [
    {
      "id": "haircut-finish",
      "name": "Haircut & finish",
    },
  ],
  "sessions": [
    {
      "booking_code": "GS-b-0",
      "booking_id": "b-0",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-09-29",
      "end_time": "2026-09-29T17:15:00+06:00",
      "id": "occ-0",
      "index": 0,
      "locked": true,
      "start_time": "2026-09-29T16:30:00+06:00",
      "state": "COMPLETED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": "GS-b-1",
      "booking_id": "b-1",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-10-06",
      "end_time": "2026-10-06T17:15:00+06:00",
      "id": "occ-1",
      "index": 1,
      "locked": true,
      "start_time": "2026-10-06T16:30:00+06:00",
      "state": "MISSED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": "GS-b-2",
      "booking_id": "b-2",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-10-13",
      "end_time": "2026-10-13T17:15:00+06:00",
      "id": "occ-2",
      "index": 2,
      "locked": true,
      "start_time": "2026-10-13T16:30:00+06:00",
      "state": "SKIPPED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": "GS-b-3",
      "booking_id": "b-3",
      "can_reschedule": false,
      "can_skip": false,
      "date": "2026-10-20",
      "end_time": "2026-10-20T17:15:00+06:00",
      "id": "occ-3",
      "index": 3,
      "locked": true,
      "start_time": "2026-10-20T16:30:00+06:00",
      "state": "CONFIRMED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": "GS-b-4",
      "booking_id": "b-4",
      "can_reschedule": true,
      "can_skip": true,
      "date": "2026-10-27",
      "end_time": "2026-10-27T17:15:00+06:00",
      "id": "occ-4",
      "index": 4,
      "locked": false,
      "start_time": "2026-10-27T16:30:00+06:00",
      "state": "SCHEDULED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": 105,
    },
    {
      "booking_code": null,
      "booking_id": null,
      "can_reschedule": true,
      "can_skip": true,
      "date": "2027-02-02",
      "end_time": null,
      "id": "occ-5",
      "index": 5,
      "locked": false,
      "start_time": "2027-02-02T16:30:00+06:00",
      "state": "PLANNED",
      "stylist": {
        "id": "maya",
        "name": "Maya",
      },
      "total": null,
    },
  ],
  "status": "ACTIVE",
  "stylist": {
    "id": "maya",
    "name": "Maya",
  },
  "time": "16:30",
}
`;
